fix jankiness of episodes list spacing

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1585,6 +1585,14 @@ and (max-width: 700px){
    #episodesHeader{
         padding-top:20px;
    }
+
+   .card{
+    margin-top:100px;
+   }
+
+   main#episodesMain{
+    margin-bottom:100px;
+   }
    
    .poll-container{
         width:80vw;
